--- a/frontend/bread-of-life/package.json
+++ b/frontend/bread-of-life/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "serve:windows": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "build:windows": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
+    "lint:windows": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
