--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "install": "cd frontend/bread-of-life && npm install && cd ../backend && npm install",
-    "build": "cd frontend && npm run build",
+    "build": "cd frontend/bread-of-life && npm run build",
     "start": "npm install && node ./backend/index.js",
     "heroku-postbuild": "npm run build"
   },
