--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "node": "14.17.6"
   },
   "scripts": {
-    "install": "cd frontend/bread-of-life && npm install && cd .. && cd .. && cd backend && npm install",
-    "build": "cd .. && cd frontend/bread-of-life && npm run build",
-    "start": "cd .. && cd .. && cd backend && node mainapp.js",
+    "install": "cd frontend/bread-of-life && npm install && cd ../backend && npm install",
+    "build": "cd frontend && npm run build",
+    "start": "npm install && node ./backend/mainapp.js",
     "heroku-postbuild": "npm run build"
   },
   "author": "",
