--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "14.17.6"
   },
   "scripts": {
-    "install": "cd frontend/bread-of-life && npm install && cd ../backend && npm install",
+    "install": "cd frontend && npm install && cd ../backend && npm install",
     "build": "cd frontend && npm run build",
     "start": "npm install && node ./backend/mainapp.js",
     "heroku-postbuild": "npm run build"
