--- a/backend/package.json
+++ b/backend/package.json
@@ -28,5 +28,6 @@
   "bugs": {
     "url": "https://github.com/CIS-FA21/project-cis_4339_project_19/issues"
   },
-  "homepage": "https://github.com/CIS-FA21/project-cis_4339_project_19#readme"
+  "homepage": "https://github.com/CIS-FA21/project-cis_4339_project_19#readme",
+  "devDependencies": {}
 }
